Layout bug fix

--- a/shoppe/src/app/globals.css
+++ b/shoppe/src/app/globals.css
@@ -17,7 +17,3 @@ header > h1 {
   box-sizing: border-box;
   text-decoration: none;
 }
-
-body {
-  padding: 20px 40px;
-}
